grammar.js
    tsql_file: $ => choice(
      repeat($.batch)
      ,seq($.execute_body_batch, repeat($.go_statement))
    ),

    batch: $ => choice(
      prec(1,$.go_statement)
      ,seq(optional($.execute_body_batch),choice($.go_statement, repeat1($.sql_clauses)), repeat($.go_statement))
      ,//TODO seq($.batch_level_statement, repeat($.go_statement))
       //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L46-L51
    ),

    // Comments
    // Single-line: -- until end of line
    // Multi-line:  /* ... */
    default: $ => token(/DEFAULT/i),
    null_: $ => token(/NULL/i),

    sql_clauses: $ => prec.right(choice(
      seq($.dml_clause, optional(SEMI))
      ,seq($.cfl_statement, optional(SEMI))
      ,seq($.ddl_clause, optional(SEMI))
      ,seq($.another_statement, optional(SEMI))
      //TODO https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L53-L61
    )),

    // =====================
    // DDL
    // =====================

    ddl_clause: $ => choice(
      $.create_table
      ,$.create_index
      ,$.create_or_alter_procedure
      ,$.create_or_alter_function
      ,$.create_or_alter_view
      ,$.create_or_alter_trigger
      ,$.create_schema
      ,$.create_type
      ,$.create_sequence
      ,$.create_synonym
      ,$.truncate_table
      ,$.alter_database
      ,$.alter_table
      ,$.drop_table
      ,$.drop_view
      ,$.drop_procedure
      ,$.drop_function
      ,$.drop_index
      ,$.drop_trigger
      ,$.drop_database
      ,$.drop_schema
      ,$.drop_sequence
      ,$.drop_type
      ,$.drop_user
      ,$.drop_login
      ,$.drop_synonym
      ,$.drop_statistics
      ,$.create_login
      ,$.alter_login
      ,$.create_user
      ,$.alter_user
      ,$.create_role
      ,$.alter_role
      ,$.drop_role
      ,$.create_server_role
      ,$.alter_server_role
      ,$.drop_server_role
    ),

    //https://learn.microsoft.com/en-us/sql/t-sql/statements/alter-database-transact-sql-file-and-filegroup-options
    alter_table: $ => seq(
      token(/ALTER/i), token(/TABLE/i),
      $.full_table_name,
      choice(
        $.alter_table_add,
        $.alter_table_alter_column,
        $.alter_table_drop,
        $.alter_table_check_constraint,
        $.alter_table_trigger,
        $.alter_table_switch,
        $.alter_table_rebuild,
        $.alter_table_set,
      )
    ),

    alter_table_add: $ => seq(
      token(/ADD/i),
      $.table_element, repeat(seq(',', $.table_element))
    ),

    alter_table_alter_column: $ => prec.right(seq(
      token(/ALTER/i), token(/COLUMN/i),
      $.id_, $.data_type,
      optional($.null_notnull),
    )),

    alter_table_drop: $ => choice(
      seq(token(/DROP/i), token(/COLUMN/i), optional($._if_exists),
        $.id_, repeat(seq(',', $.id_))),
      seq(token(/DROP/i), token(/CONSTRAINT/i), optional($._if_exists),
        $.id_, repeat(seq(',', $.id_))),
    ),

    alter_table_check_constraint: $ => seq(
      choice(token(/CHECK/i), token(/NOCHECK/i)),
      token(/CONSTRAINT/i),
      choice(token(/ALL/i), seq($.id_, repeat(seq(',', $.id_)))),
    ),

    alter_table_trigger: $ => seq(
      choice(token(/ENABLE/i), token(/DISABLE/i)),
      token(/TRIGGER/i),
      choice(token(/ALL/i), seq($.id_, repeat(seq(',', $.id_)))),
    ),

    alter_table_switch: $ => prec.right(seq(
      token(/SWITCH/i),
      optional(seq(token(/PARTITION/i), $.expression)),
      token(/TO/i), $.full_table_name,
      optional(seq(token(/PARTITION/i), $.expression)),
    )),

    alter_table_rebuild: $ => prec.right(seq(
      token(/REBUILD/i),
      optional(seq(token(/WITH/i), '(', $.alter_table_option, repeat(seq(',', $.alter_table_option)), ')')),
    )),

    alter_table_set: $ => seq(
      token(/SET/i), '(',
      token(/LOCK_ESCALATION/i), '=', choice(token(/TABLE/i), token(/AUTO/i), token(/DISABLE/i)),
      ')',
    ),

    alter_table_option: $ => seq(
      $.id_, '=', choice($.id_, $.decimal_, token(/ON/i), token(/OFF/i)),
    ),

    // =====================
    // DROP statements
    // =====================

    // Pattern A — multi-name with IF EXISTS
    _if_exists: $ => seq(token(/IF/i), token(/EXISTS/i)),
    table_element: $ => choice(
      $.column_definition,
      $.table_constraint,
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L1485
    column_definition: $ => prec.right(seq(
      field('name', $.id_),
      choice(
        seq($.data_type, repeat(choice(
          $.null_notnull,
          $.identity_column,
          $.column_constraint,
        ))),
        seq(token(/AS/i), $.expression, optional(token(/PERSISTED/i))),
      ),
    )),

    null_notnull: $ => choice(
      seq(token(/NOT/i), $.null_),
      $.null_,
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L1488
    table_constraint: $ => seq(
      optional(seq(token(/CONSTRAINT/i), field('name', $.id_))),
      choice(
        seq(token(/PRIMARY/i), token(/KEY/i),
          token('('), $.column_name_list, token(')')),
        seq(token(/UNIQUE/i),
          token('('), $.column_name_list, token(')')),
        seq(token(/FOREIGN/i), token(/KEY/i),
          token('('), $.column_name_list, token(')'),
          token(/REFERENCES/i), $.full_table_name,
          optional(seq(token('('), $.column_name_list, token(')')))),
        seq(token(/CHECK/i), token('('), $.search_condition, token(')')),
        seq($.default, $.expression, token(/FOR/i), $.id_),
      )
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L250-L264
    string_lit: $ => token(seq(
      optional('N')
      ,"'" //Opening Single Quote
      ,repeat(choice(
        /[^']/,               // Any character except a single quote
        "''"                  // Escaped single quote (two single quotes)
      ))
      ,"'" //Closing Single Quote

    )),


    column_name_list: $ => seq($.id_, repeat(seq(token(','), $.id_))),

    full_table_name: $ => prec.right(seq(
      optional(choice(
      //NOTE? whats this dotdot example https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L5118
        seq(field('server', $.id_), DOT, field('database', $.id_), DOT, field('schema', $.id_), DOT)
        ,seq(field('database', $.id_), DOT, field('schema', $.id_), DOT)
        ,seq(field('schema', $.id_), DOT)
      ))
      ,field('table', $.id_)
    )),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L5155-L5160
    full_column_name: $ => prec.right(seq(
      optional(choice(
        seq(field('server', $.id_), DOT, field('schema', $.id_), DOT, field('table', $.id_), DOT)
        ,seq(field('schema', $.id_), DOT, field('table', $.id_), DOT)
        ,seq(field('table', $.id_), DOT)
        ,seq(token(/DELETED/i), DOT)
        ,seq(token(/INSERTED/i), DOT)
      ))
      ,field('column', $.id_)
    )),

    //TODO CORPUS
    expression: $ => choice(
      $.primitive_expression
      ,$.full_column_name
      ,$.function_call
      ,$.bracket_expression
      ,$.case_expression
      ,$.unary_operator_expression
      // Multiplicative: * / %
      ,prec.left(5, seq($.expression, $.asterisk, $.expression))
      ,prec.left(5, seq($.expression, token('/'), $.expression))
      ,prec.left(5, seq($.expression, token('%'), $.expression))
      // Additive: + -
      ,prec.left(4, seq($.expression, $.PLUS, $.expression))
      ,prec.left(4, seq($.expression, token('-'), $.expression))
      // Bitwise: & ^ | ||
      ,prec.left(3, seq($.expression, token('&'), $.expression))
      ,prec.left(3, seq($.expression, token('^'), $.expression))
      ,prec.left(3, seq($.expression, token('|'), $.expression))
      ,prec.left(3, seq($.expression, token('||'), $.expression))
      // COLLATE
      ,prec.left(7, seq($.expression, $.collation_))
      // AT TIME ZONE
      ,prec.left(7, seq($.expression, $.AT_KEYWORD, token(/TIME/i), token(/ZONE/i), $.expression))
      // XML methods: .value() .query() .exist() .modify()
      ,prec.left(8, seq($.expression, DOT, choice($.value_call, $.query_call, $.exist_call, $.modify_call)))
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L3945
    search_condition: $ => choice(
      $.predicate
      ,prec(3, seq(token(/NOT/i), $.search_condition))
      ,prec.left(2, seq($.search_condition, token(/AND/i), $.search_condition))
      ,prec.left(1, seq($.search_condition, token(/OR/i), $.search_condition))
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L3983
    predicate: $ => choice(
      seq(token(/EXISTS/i), token('('), $.subquery, token(')'))
      ,$.freetext_predicate
      ,prec(1, seq($.expression, $.comparison_operator, $.expression))
      ,seq($.expression, optional(token(/NOT/i)), token(/BETWEEN/i), $.expression, token(/AND/i), $.expression)
      ,seq($.expression, optional(token(/NOT/i)), token(/IN/i), token('('), choice($.subquery, $.expression_list_), token(')'))
      ,prec.right(seq($.expression, optional(token(/NOT/i)), token(/LIKE/i), $.expression, optional(seq(token(/ESCAPE/i), $.expression))))
      ,seq($.expression, token(/IS/i), optional(token(/NOT/i)), $.null_)
      ,seq($.expression, $.comparison_operator, choice(token(/ALL/i), token(/SOME/i), token(/ANY/i)), '(', $.subquery, ')')
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L4011-L4024
    comparison_operator: $ => choice(
      token('=')
      ,token('<>')
      ,token('!=')
      ,token('<')
      ,token('>')
      ,token('<=')
      ,token('>=')
      ,token('!<')
      ,token('!>')
    ),

    //TODO CORPUS
    primitive_expression: $ => choice(
      $.default
      ,$.null_
      ,$.LOCAL_ID_
      ,$.primitive_constant
      ,$.dollar_action_
    ),

    primitive_constant: $ => choice(
      $.string_lit
      ,$.binary
      ,$.real_
      ,$.decimal_
      ,$.float_
      ,$.money_
      ,$.parameter_
    ),

    decimal_: $ => DECIMAL,

    //
    // HELPERS
    //

    // Word token for keyword extraction optimization
    // This must match the identifier pattern so tree-sitter can extract keywords
    _word: $ => /[A-Za-z_#][A-Za-z_#$@0-9]*/,

    //https://msdn.microsoft.com/en-us/library/ms175874.aspx
    id_: $ => choice(
      $._word
      ,$.TEMP_ID_
      ,SQUARE_BRACKET_ID
      ,DOUBLE_QUOTE_ID
      ,$._keyword
      //TODO https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L6261
    ),

    //https://github.com/antlr/grammars-v4/blob/master/sql/tsql/TSqlParser.g4#L5287
    // Keywords that can be used as identifiers (column names, table names, aliases)
    // Excludes statement/clause-starting keywords (SELECT, FROM, WHERE, etc.) to avoid state explosion
    _keyword: $ => prec(-1, choice(
      token(/VALUE/i), token(/QUERY/i), token(/EXIST/i), token(/MODIFY/i), token(/NODES/i)
      ,token(/INT/i), token(/DATE/i), token(/TIME/i), token(/TEXT/i), token(/XML/i)
      ,token(/BIT/i), token(/FLOAT/i), token(/REAL/i), token(/CHAR/i), token(/IMAGE/i)
      ,token(/NAME/i), token(/TYPE/i), token(/KEY/i), token(/LEVEL/i)
      ,token(/INDEX/i), token(/TABLE/i), token(/VIEW/i), token(/SCHEMA/i)
      ,token(/ROLE/i), token(/USER/i), token(/FILE/i), token(/PATH/i)
      ,token(/DEFAULT/i), token(/NULL/i), token(/SOURCE/i), token(/TARGET/i)
      ,token(/VERSION/i), token(/OWNER/i), token(/JSON/i), token(/GO/i)
    )),
